--- a/style.css
+++ b/style.css
@@ -281,6 +281,13 @@
      box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 3px 3px -2px rgba(0, 0, 0, 0.12);
 }
  @media (max-width: 767px) {
+ 
+	 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
+		 padding: 0.7em;
+     }
+	 .timeline-container {
+		 width: calc(100vw - 20px) !important;
+	}
      .timeline-centered:before {
          left: 10%;
     }
