--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ img {
      transition: all 0.5s;
 }
 
- @media (min-width: 768px) {s
+ @media (min-width: 768px) {
  .timeline-centered .timeline-entry .timeline-entry-inner:hover .timeline-label, .timeline-centered .timeline-entry .timeline-entry-inner:focus .timeline-label {
      margin-left: 60px;
      padding-left: calc(1.7em + 10px);
